<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PDFMarker</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_file">File</string>
    <string name="action_manual">Manual</string>
    <string name="action_stationary">Stationary</string>
    <string name="action_mode">Mode</string>
    <string name="action_cut">Cut</string>
    <string name="title_activity_file_selector">Select a PDF file</string>
    <string name="title_activity_page">PDF Marker</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_doc">About</string>
    <string name="fast_turn">Fast page turn</string>
    <string name="fast_turn_summary">Skip page turn animation</string>
    <string name="keep_ratio">Keep raw width/height ratio</string>
    <string name="keep_ratio_summary">Keep width/height ratio of the original page</string>
    <string name="hardware_acceleration">Hardware acceleration</string>
    <string name="hardware_acceleration_summary">Smooth page zoom/drag/turn with hardware acceleration.
        Turn this off if you see problems with drawing.</string>
    <string name="full_screen">Open with full screen</string>
    <string name="full_screen_summary">Read pdf files in full extend of screen</string>
    <string name="recently">Recently Used Files</string>
    <string name="msg_cut">Page edge cut</string>
    <string name="msg_firstpage">Already at the first page</string>
    <string name="msg_lastpage">Already at the last page</string>
    <string name="msg_wrong_page">Wrong page number</string>
	<string name="goto_page">Go to page:</string>
	<string name="max_page">Max</string>
	<string name="go">Go</string>
	<string name="delete_marks">Do you want to delete all marks on this PDF file?</string>
    <string name="license">License</string>
    <string name="license_hide">Don\'t show this dialog again</string>
    <string name="license_ok">OK</string>
    <string name="show_mode">Touch top of the screen to show mode button</string>
    <string name="search_all">Search all PDF files under current directory</string>
    <string name="search">Search</string>
    <string name="searching">Searching</string>

</resources>
