<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.pan.studentmaster.PageActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/action_about"/>
    
    <item android:id="@+id/action_manual"
        android:orderInCategory="400"
        android:showAsAction="never"
        android:title="@string/action_manual" />
    
    <item android:id="@+id/action_mode"
        android:checkable="true"
        android:showAsAction="always"
        android:visible="true"
        android:orderInCategory="100"
        android:checked="true"
        android:icon="@drawable/ic_hand"
        android:title="@string/action_mode" />
    
    <item android:id="@+id/action_cut"
        android:showAsAction="always"
        android:visible="true"
        android:orderInCategory="50"
        android:icon="@drawable/ic_cut"
        android:title="@string/action_cut" />
</menu>
