<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.bluefeather.pdfmarker.Main" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/action_about"/>
    
    <item android:id="@+id/action_file"
        android:title="@string/action_file"
        android:icon="@drawable/ic_pdf"
        android:orderInCategory="300"
        android:showAsAction="always" />
    
    <item android:id="@+id/action_manual"
        android:orderInCategory="400"
        android:showAsAction="never"
        android:title="@string/action_manual" />
    
</menu>
